--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="css/Style.css">
 </head>
 <body>
+<div id="wrapper">
     <h1>Hola</h1>
     <h2>Hola</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
 
     <p>Lorem ipsum</p>
+</div>    
 </body>
 </html>
