--- a/index.html
+++ b/index.html
@@ -8,13 +8,32 @@
 </head>
 <body>
 <div id="wrapper">
-    <h1>Hola</h1>
-    <h2>Hola</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
+    <header>
+        <h1>Alberto Basanta</h1>
+        <nav>
+            <div><a href="#portfolio">portfolio</a></div>
+            <div><a href="#sobremi">sobre mi</a></div>
+            <div><a href="#contacto">contacto</a></div>
+        </nav>
+    </header>
+    <section id="slider" class="centrado">
+        <h2>"Estos son mis diseños, <br>si no le gustan, tengo otros"</h2>
+    </section>
+    <section id="portfolio">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
+        <p>Lorem ipsum</p>
+        <article  class="img-portfolio" draggable="true">
+            <img src="images/design-social-club-cover-min-IxNj.png" alt="portfolio adasdasd">
+        </article>
+        <article></article>
+        <article></article>
+    </section>
+    <section id="sobremi">
+    </section>
+    <section id="contacto">
 
-    <p>Lorem ipsum</p>
-</div>    
-
-ddsgdfsg
+    </section>
+    <footer></footer>
+</div>
 </body>
 </html>
