--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/Style.css">
+    <link id="rootcss" rel="stylesheet" href="css/root.css">
+
 </head>
 <body>
 <div id="wrapper">
@@ -15,6 +17,9 @@
             <div><a href="#sobremi">sobre mi</a></div>
             <div><a href="#contacto">contacto</a></div>
         </nav>
+        <!-- <div><img class="icono" src="images/color.svg" alt="icono cambio color"></div> -->
+        <div id="iconoColor" class="icono-svg"></div>
+        
     </header>
     <section id="slider" class="centrado">
         <h2>"Estos son mis diseños, <br>si no le gustan, tengo otros"</h2>
@@ -35,5 +40,6 @@
     </section>
     <footer></footer>
 </div>
+<script src="js/app.js"></script>
 </body>
 </html>
