--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +17,11 @@
             <div><a href="#sobremi">sobre mi</a></div>
             <div><a href="#contacto">contacto</a></div>
         </nav>
-        <!-- <div><img class="icono" src="images/color.svg" alt="icono cambio color"></div> -->
+        <div id="selectorColores">
+        <div id="iconoLight" class="icono-svg"></div>
+        <div id="iconoDark" class="icono-svg ocultar"></div>
         <div id="iconoColor" class="icono-svg"></div>
+    </div>
         
     </header>
     <section id="slider" class="centrado">
