--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div id="wrapper">
     <header>
-        <h1>Alberto Basanta</h1>
+        <h4 class="textoDegradado">Alberto Basanta</h4>
         <nav>
             <div><a href="#portfolio">portfolio</a></div>
             <div><a href="#sobremi">sobre mi</a></div>
@@ -25,7 +25,7 @@
         
     </header>
     <section id="slider" class="centrado">
-        <h2>"Estos son mis diseños, <br>si no le gustan, tengo otros"</h2>
+        <h1>"Estos son mis diseños, <br>si no le gustan, tengo otros"</h1>
     </section>
     <section id="portfolio">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
