--- a/index.html
+++ b/index.html
@@ -5,27 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/Style.css">
-    <link id="rootcss" rel="stylesheet" href="css/root.css">
+    <link id="rootcss" rel="stylesheet" href='css/root.css'>
 
 </head>
 <body>
 <div id="wrapper">
     <header>
-        <h4 class="textoDegradado">Alberto Basanta</h4>
+        <h4 class="textoDegradado black">Alberto Basanta</h4>
         <nav>
             <div><a href="#portfolio">portfolio</a></div>
             <div><a href="#sobremi">sobre mi</a></div>
             <div><a href="#contacto">contacto</a></div>
-        </nav>
-        <div id="selectorColores">
+        </nav> 
+    </header>
+    <div id="selectorColores">
         <div id="iconoLight" class="icono-svg"></div>
         <div id="iconoDark" class="icono-svg ocultar"></div>
         <div id="iconoColor" class="icono-svg"></div>
     </div>
-        
-    </header>
     <section id="slider" class="centrado">
-        <h1>"Estos son mis diseños, <br>si no le gustan, tengo otros"</h1>
+        <h1 class="animate-movimiento-rebote">"Estos son mis diseños, <br>si no le gustan, tengo otros"</h1>
     </section>
     <section id="portfolio">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
