--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
         <div id="iconoColor" class="icono-svg"></div>
     </div>
     <section id="slider" class="centrado">
-        <h1 class="animate-movimiento-rebote">"Estos son mis diseños, <br>si no le gustan, tengo otros"</h1>
+        <div class="marcoSlider">
+            <h1 class="animate-movimiento-rebote">"Estos son mis diseños, <br>si no le gustan, tengo otros"</h1>
+        </div>
+        <div class="bolaMov1"></div>
+        <div class="bolaMov2"></div>
+        <div class="bolaMov3"></div>
+        <div class="bolaMov4"></div>
+        <div class="bolaMov5"></div>
     </section>
     <section id="portfolio">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
