--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="iconoDark" class="icono-svg ocultar"></div>
         <div id="iconoColor" class="icono-svg"></div>
     </div>
-    <section id="slider" class="centrado">
+    <div id="slider">
         <div class="marcoSlider">
             <h1 class="animate-movimiento-rebote">"Estos son mis diseños, <br>si no le gustan, tengo otros"</h1>
         </div>
@@ -32,22 +32,45 @@
         <div class="bolaMov3"></div>
         <div class="bolaMov4"></div>
         <div class="bolaMov5"></div>
-    </section>
+    </div>
     <section id="portfolio">
+        <div class="titular"><div class="cuadro"></div><h2>Portfolio</h2></div>
+        <div class="filete"></div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
-        <p>Lorem ipsum</p>
-        <article  class="img-portfolio" draggable="true">
+        <article  class="imgPortfolio">
             <img src="images/design-social-club-cover-min-IxNj.png" alt="portfolio adasdasd">
         </article>
         <article></article>
         <article></article>
     </section>
     <section id="sobremi">
+        <div class="titular"><div class="cuadro"></div><h2>Sobre mi</h2></div>
+        <div class="filete"></div>
+        <div class="doscolumnas">
+            <div class="flexcentrado">
+                <img class="imgAlberto" src="images/alberto-basanta.webp" alt="Alberto Basanta">
+        </div>
+        <div>
+        <h4>Alberto Basanta Debasa</h4>
+        <p>Diseño gráfico | Desarrollo web | Wordpress | HTML | CSS | UI/UX | JavaScript | PHP</p>
+        <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi... <br> Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en HTML, CSS, UI/UX y aprendiendo programación JavaScript y PHP.</p>
+    </div>
+    </div>
     </section>
     <section id="contacto">
-
+        <div class="titular"><div class="cuadro"></div><h2>Contacto</h2></div>
+        <div class="filete"></div>
+        <div class="doscolumnas">
+            <div class="lista">
+<div class="listado"><a href="mailto:basantades@gmail.com">basantades@gmail.com</a></div>
+<div class="listado"><a href="https://api.whatsapp.com/send?phone=34630991055">630991055</a></div>
+<div class="listado"><a href="https://www.linkedin.com/in/albertobasanta/">/albertobasanta</a></div>
+<div class="listado"><a href="https://github.com/basantades">/basantades</a></div>
+</div>
+<div class="flexcentrado"><h5>frase final ponte en contacto</h5></div>
+</div>
     </section>
-    <footer></footer>
+    <footer><p>© 2024 Alberto Basanta. Ya has llegado al final, vuelve al inicio</p></footer>
 </div>
 <script src="js/app.js"></script>
 </body>
