--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="flexcentrado"><h5>frase final ponte en contacto</h5></div>
 </div>
     </section>
-    <footer><p>© 2024 Alberto Basanta. Ya has llegado al final, vuelve al inicio</p></footer>
+    <footer><p>© 2024 Alberto Basanta. Ya has llegado al final, <a href="#wrapper">vuelve al inicio</a></p></footer>
 </div>
 <script src="js/app.js"></script>
 </body>
