--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="iconoLight" class="icono-svg"></div>
         <div id="iconoDark" class="icono-svg ocultar"></div>
         <div id="iconoColor" class="icono-svg"></div>
+        <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="slider">
         <div class="marcoSlider">
