--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 <div class="listado"><a href="https://www.linkedin.com/in/albertobasanta/">/albertobasanta</a></div>
 <div class="listado"><a href="https://github.com/basantades">/basantades</a></div>
 </div>
-<div class="flexcentrado"><h5>frase final ponte en contacto</h5></div>
+<div class="flexcentrado">
+    <div class="marco"><h5>frase final ponte en contacto</h5></div>
+</div>
 </div>
     </section>
     <footer><p>© 2024 Alberto Basanta. Ya has llegado al final, <a href="#wrapper">vuelve al inicio</a></p></footer>
