--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <div class="filete"></div>
         <div class="doscolumnas">
             <div class="lista">
-<div class="listado"><a href="mailto:basantades@gmail.com">basantades@gmail.com</a></div>
-<div class="listado"><a href="https://api.whatsapp.com/send?phone=34630991055">630991055</a></div>
-<div class="listado"><a href="https://www.linkedin.com/in/albertobasanta/">/albertobasanta</a></div>
-<div class="listado"><a href="https://github.com/basantades">/basantades</a></div>
+<div class="listado"><a href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div><p>basantades@gmail.com</p></a></div>
+<div class="listado"><a href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div><p>630991055</p></a></div>
+<div class="listado"><a href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div><p>/albertobasanta</p></a></div> 
+<div class="listado"><a href="https://github.com/basantades"><div id="iconoGithub" class="iconoscontacto"></div><p>/basantades</p></a></div>
 </div>
 <div class="flexcentrado">
     <div class="marco"><h5>frase final ponte en contacto</h5></div>
