--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
         <div class="titular"><div class="cuadro"></div><h2>Portfolio</h2></div>
         <div class="filete"></div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
-        <article  class="imgPortfolio">
+        <article>
+            <div class="imgPortfolio">
             <img src="images/design-social-club-cover-min-IxNj.png" alt="portfolio adasdasd">
+        </div>
+        <div class="textoPortfolio">
+<h4>Titulo</h4>
+<p class="destacado"> Palabras clave | Palabras clave | Palabras clave | Palabras clave | Palabras clave </p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+<a href="#" class="destacado2"><button>Leer más</button></a>
+        </div>
         </article>
         <article></article>
         <article></article>
@@ -53,7 +61,7 @@
         </div>
         <div>
         <h4>Alberto Basanta Debasa</h4>
-        <p>Diseño gráfico | Desarrollo web | Wordpress | HTML | CSS | UI/UX | JavaScript | PHP</p>
+        <p class="destacado">Diseño gráfico | Desarrollo web | Wordpress | HTML | CSS | UI/UX | JavaScript</p>
         <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi... <br> Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en HTML, CSS, UI/UX y aprendiendo programación JavaScript y PHP.</p>
     </div>
     </div>
@@ -61,7 +69,7 @@
     <section id="contacto">
         <div class="titular"><div class="cuadro"></div><h2>Contacto</h2></div>
         <div class="filete"></div>
-        <div class="doscolumnas">
+        <div class="doscolumnas contacto">
             <div class="lista">
 <div class="listado"><a href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div><p>basantades@gmail.com</p></a></div>
 <div class="listado"><a href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div><p>630991055</p></a></div>
@@ -73,7 +81,12 @@
 </div>
 </div>
     </section>
-    <footer><p>© 2024 Alberto Basanta. Ya has llegado al final, <a href="#wrapper">vuelve al inicio</a></p></footer>
+    <footer>
+        <p>© 2024 Alberto Basanta.</p>
+        <div class="flex"><p>Ya has llegado al final, </p>
+            <a  class="flex" href="#wrapper"><p><span class="bold">vuelve al inicio</span><div id="iconoUp" class="iconoscontacto"></div></p></a>
+        </div>
+    </footer>
 </div>
 <script src="js/app.js"></script>
 </body>
