--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="slider">
+        <h1 class="animate-movimiento-rebote">FRONT—END 
+            <br>
+            DEVELOPER</h1>
         <div class="marcoSlider">
-            <h1 class="animate-movimiento-rebote">"Estos son mis diseños, <br>si no le gustan, tengo otros"</h1>
         </div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
@@ -34,13 +36,16 @@
         <div class="bolaMov4"></div>
         <div class="bolaMov5"></div>
     </div>
+    <section id="destacados">
+        <h2>Diseño gráfico | Desarrollo web | Wordpress | HTML | CSS | UI/UX | JavaScript</h2>
+    </section>
     <section id="portfolio">
-        <div class="titular"><div class="cuadro"></div><h2>Portfolio</h2></div>
+        <div class="titular"><div class="cuadro"></div><h2>Portfolio</h2><div class="cuadro"></div></div>
         <div class="filete"></div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente enim beatae possimus aut exercitationem qui optio eaque architecto, sequi repudiandae vero repellat ratione sunt, aspernatur blanditiis consequuntur iusto magnam!</p>
+        <h3 class="animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h3>
         <article>
             <div class="imgPortfolio">
-            <img src="images/design-social-club-cover-min-IxNj.png" alt="portfolio adasdasd">
+            <img src="/images/juego-pokemon.webp" alt="portfolio adasdasd">
         </div>
         <div class="textoPortfolio">
 <h4>Titulo</h4>
@@ -53,7 +58,7 @@
         <article></article>
     </section>
     <section id="sobremi">
-        <div class="titular"><div class="cuadro"></div><h2>Sobre mi</h2></div>
+        <div class="titular"><div class="cuadro"></div><h2>Sobre mi</h2><div class="cuadro"></div></div>
         <div class="filete"></div>
         <div class="doscolumnas">
             <div class="flexcentrado">
@@ -67,7 +72,7 @@
     </div>
     </section>
     <section id="contacto">
-        <div class="titular"><div class="cuadro"></div><h2>Contacto</h2></div>
+        <div class="titular"><div class="cuadro"></div><h2>Contacto</h2><div class="cuadro"></div></div>
         <div class="filete"></div>
         <div class="doscolumnas contacto">
             <div class="lista">
