--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="slider">
-        <h1 class="animate-movimiento-rebote">FRONT—END 
-            <br>
-            DEVELOPER</h1>
+        <div class="textHero">
+            <h1 class="animate-fade">FRONT—END 
+                <br>
+                DEVELOPER</h1>
+        </div>
+
         <div class="marcoSlider">
         </div>
         <div class="bolaMov1"></div>
