--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
     </div>
     <div id="slider">
         <div class="textHero">
+            <div></div>
             <h1 class="animate-fade">FRONT—END 
                 <br>
                 DEVELOPER</h1>
-        </div>
-
-        <div class="marcoSlider">
+            <a href="#destacados"><div class="flechaDown"></div></a>
         </div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
@@ -70,7 +69,8 @@
         <div>
         <h4>Alberto Basanta Debasa</h4>
         <p class="destacado">Diseño gráfico | Desarrollo web | Wordpress | HTML | CSS | UI/UX | JavaScript</p>
-        <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi... <br> Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en HTML, CSS, UI/UX y aprendiendo programación JavaScript y PHP.</p>
+        <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
+        <p>Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en HTML, CSS, UI/UX, JavaScript y PHP.</p>
     </div>
     </div>
     </section>
@@ -79,10 +79,11 @@
         <div class="filete"></div>
         <div class="doscolumnas contacto">
             <div class="lista">
-<div class="listado"><a href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div><p>basantades@gmail.com</p></a></div>
-<div class="listado"><a href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div><p>630991055</p></a></div>
-<div class="listado"><a href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div><p>/albertobasanta</p></a></div> 
-<div class="listado"><a href="https://github.com/basantades"><div id="iconoGithub" class="iconoscontacto"></div><p>/basantades</p></a></div>
+<div class="listado"><a target="_blank" href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div><p>basantades@gmail.com</p></a></div>
+<div class="listado"><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div><p>630991055</p></a></div>
+<div class="listado"><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div><p>/albertobasanta</p></a></div> 
+<div class="listado"><a target="_blank" href="https://github.com/basantades"><div id="iconoGithub" class="iconoscontacto"></div><p>/basantades</p></a></div>
+<div class="listado"><a target="_blank" href="https://codepen.io/basantades"><div id="iconoCodepen" class="iconoscontacto"></div><p>/basantades</p></a></div>
 </div>
 <div class="flexcentrado">
     <div class="marco"><h5>frase final ponte en contacto</h5></div>
