--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link id="rootcss" rel="stylesheet" href='css/root.css'>
 
 </head>
@@ -27,9 +27,7 @@
     <div id="slider">
         <div class="textHero">
             <div></div>
-            <h1 class="animate-fade">FRONT—END 
-                <br>
-                DEVELOPER</h1>
+            <h1 class="animate-fade">FRONT<br class="soloTablet">—END <br>DEVELO<br class="soloMovil">PER</h1>
             <a href="#destacados"><div class="flechaDown"></div></a>
         </div>
         <div class="bolaMov1"></div>
@@ -39,7 +37,7 @@
         <div class="bolaMov5"></div>
     </div>
     <section id="destacados">
-        <h2>Diseño gráfico | Desarrollo web | Wordpress | HTML | CSS | UI/UX | JavaScript</h2>
+        <h2>Desarrollo web | CSS | HTML | JavaScript | Wordpress | UI/UX | Diseño gráfico</h2>
     </section>
     <section id="portfolio">
         <div class="titular"><div class="cuadro"></div><h2>Portfolio</h2><div class="cuadro"></div></div>
@@ -66,11 +64,11 @@
             <div class="flexcentrado">
                 <img class="imgAlberto" src="images/alberto-basanta.webp" alt="Alberto Basanta">
         </div>
-        <div>
+        <div class="textoPortfolio">
         <h4>Alberto Basanta Debasa</h4>
-        <p class="destacado">Diseño gráfico | Desarrollo web | Wordpress | HTML | CSS | UI/UX | JavaScript</p>
+        <p class="destacado">Desarrollo web | CSS | HTML | JavaScript | Wordpress | UI/UX | Diseño gráfico</p>
         <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
-        <p>Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en HTML, CSS, UI/UX, JavaScript y PHP.</p>
+        <p>Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en CSS, UI/UX, JavaScript y PHP.</p>
     </div>
     </div>
     </section>
