--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3 class="animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h3>
         <article>
             <div class="imgPortfolio">
-            <img src="/images/juego-pokemon.webp" alt="portfolio adasdasd">
+            <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
         </div>
         <div class="textoPortfolio">
 <h4>Titulo</h4>
