--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
     <section id="portfolio">
         <div class="titular"><div class="cuadro"></div><h2>Portfolio</h2><div class="cuadro"></div></div>
-        <div class="filete"></div>
+        <div class="filete aparicionfilete"></div>
         <h3 class="animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h3>
         <article>
             <div class="imgPortfolio">
@@ -59,10 +59,10 @@
     </section>
     <section id="sobremi">
         <div class="titular"><div class="cuadro"></div><h2>Sobre mi</h2><div class="cuadro"></div></div>
-        <div class="filete"></div>
+        <div class="filete aparicionfilete"></div>
         <div class="doscolumnas">
             <div class="flexcentrado">
-                <img class="imgAlberto" src="images/alberto-basanta.webp" alt="Alberto Basanta">
+                <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" alt="Alberto Basanta">
         </div>
         <div class="textoPortfolio">
         <h4>Alberto Basanta Debasa</h4>
@@ -74,7 +74,7 @@
     </section>
     <section id="contacto">
         <div class="titular"><div class="cuadro"></div><h2>Contacto</h2><div class="cuadro"></div></div>
-        <div class="filete"></div>
+        <div class="filete aparicionfilete"></div>
         <div class="doscolumnas contacto">
             <div class="lista">
 <div class="listado"><a target="_blank" href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div><p>basantades@gmail.com</p></a></div>
