--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Alberto Basanta</title>
+    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <link id="rootcss" rel="stylesheet" href='css/root.css'>
 
@@ -24,7 +25,7 @@
         <div id="iconoColor" class="icono-svg"></div>
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
-    <div id="slider">
+    <div id="hero">
         <div class="textHero">
             <div></div>
             <h1 class="animate-fade">FRONT<br class="soloTablet">—END <br>DEVELO<br class="soloMovil">PER</h1>
@@ -45,6 +46,11 @@
         <h3 class="animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h3>
         <article>
             <div class="imgPortfolio">
+            <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
+        </div>
+        <div class="slider">
+            <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
+            <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
             <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
         </div>
         <div class="textoPortfolio">
