--- a/index.html
+++ b/index.html
@@ -45,23 +45,35 @@
         <div class="filete aparicionfilete"></div>
         <h3 class="animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h3>
         <article>
-            <div class="imgPortfolio">
-            <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
+            <div class="carrusel">
+        <div class="interiorCarrusel">
+            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
+            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
+            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
         </div>
-        <div class="slider">
-            <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
-            <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
-            <img src="images/juego-pokemon.webp" alt="portfolio adasdasd">
-        </div>
+    </div>
         <div class="textoPortfolio">
-<h4>Titulo</h4>
-<p class="destacado"> Palabras clave | Palabras clave | Palabras clave | Palabras clave | Palabras clave </p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-<a href="#" class="destacado2"><button>Leer más</button></a>
+        <h4>Titulo</h4>
+        <p class="destacado"> Palabras clave | Palabras clave | Palabras clave | Palabras clave | Palabras clave </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <a href="#" class="boton">Leer más</a>
         </div>
         </article>
-        <article></article>
-        <article></article>
+        <article>
+            <div class="carrusel">
+        <div class="interiorCarrusel">
+            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
+            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
+            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
+        </div>
+    </div>
+        <div class="textoPortfolio">
+        <h4>Titulo</h4>
+        <p class="destacado"> Palabras clave | Palabras clave | Palabras clave | Palabras clave | Palabras clave </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <a href="#" class="boton">Leer más</a>
+        </div>
+        </article>
     </section>
     <section id="sobremi">
         <div class="titular"><div class="cuadro"></div><h2>Sobre mi</h2><div class="cuadro"></div></div>
@@ -102,5 +114,6 @@
     </footer>
 </div>
 <script src="js/app.js"></script>
+<script src="js/carrusel.js"></script>
 </body>
 </html>
