--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     </div>
         <div class="textoPortfolio">
         <h4>Titulo</h4>
-        <p class="destacado"> Palabras clave | Palabras clave | Palabras clave | Palabras clave | Palabras clave </p>
+        <p class="destacado"> JavaScript | CSS | HTML | Palabras clave | Palabras clave </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <a href="#" class="boton">Leer más</a>
+        <div class="botones"><a href="#" class="boton">Leer más</a> <a href="#" class="boton">Leer más</a></div>
         </div>
         </article>
         <article>
@@ -71,7 +71,7 @@
         <h4>Titulo</h4>
         <p class="destacado"> Palabras clave | Palabras clave | Palabras clave | Palabras clave | Palabras clave </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <a href="#" class="boton">Leer más</a>
+        <div class="botones"><a href="#" class="boton">Leer más</a> <a href="#" class="boton">Leer más</a></div>
         </div>
         </article>
     </section>
