--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="bolaMov5"></div>
     </div>
     <section id="destacados">
-        <h2>Desarrollo web | CSS | HTML | JavaScript | Wordpress | UI/UX | Diseño gráfico</h2>
+        <h2>Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h2>
     </section>
     <section id="portfolio">
         <div class="titular"><div class="cuadro"></div><h2>Portfolio</h2><div class="cuadro"></div></div>
@@ -48,30 +48,31 @@
             <div class="carrusel">
         <div class="interiorCarrusel">
             <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
-            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
-            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
         </div>
     </div>
         <div class="textoPortfolio">
-        <h4>Titulo</h4>
-        <p class="destacado"> JavaScript | CSS | HTML | Palabras clave | Palabras clave </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <div class="botones"><a href="#" class="boton">Leer más</a> <a href="#" class="boton">Leer más</a></div>
-        </div>
+        <h4>Mini juego Pokémon</h4>
+        <p class="destacado"> Desarrollo web | JavaScript | CSS | HTML | Diseño gráfico</p>
+        <p>Este proyecto presenta un juego interactivo desarrollado en JavaScript vanilla, inspirado en el universo Pokémon. Eleva el clásico juego de “Piedra, papel o tijera” a una experiencia más compleja incorporando cinco elementos distintos en lugar de tres.</p>
+        <div class="botones">
+            <a target="_blank" href="https://minijuego-poke.netlify.app/" class="boton"><p>Ver sitio</p><div id="iconoLink" class="iconosportfolio"></div></a>
+            <a target="_blank" href="https://github.com/basantades/mini-juego-pokemon" class="boton"><p>Ver repositorio GitHub</p><div id="iconoGithub" class="iconosportfolio"></div></a>
+            <a target="_blank" href="https://drive.google.com/file/d/1IS0r5HMhCB9aUiFxcHzaVnw3pRPC5V4a/view?usp=sharing" class="boton"><p>Presentación de proyecto</p><div id="iconoPdf" class="iconosportfolio"></div></a>
+    </div>        </div>
         </article>
         <article>
             <div class="carrusel">
         <div class="interiorCarrusel">
-            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
-            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
-            <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
+            <img src="images/fabtextil.webp" alt="web fabtextil en WordPress">
         </div>
     </div>
         <div class="textoPortfolio">
-        <h4>Titulo</h4>
-        <p class="destacado"> Palabras clave | Palabras clave | Palabras clave | Palabras clave | Palabras clave </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <div class="botones"><a href="#" class="boton">Leer más</a> <a href="#" class="boton">Leer más</a></div>
+        <h4>Web FAB TEXTIL</h4>
+        <p class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </p>
+        <p>Realización de la pagina web corporativa para la empresa textil FAB TEXTIL. El diseño se ha enfocado en crear una estética moderna que combine con la identidad familiar y cercana de la marca. Desarrollada utilizando WordPress y optimizando su SEO.</p>
+        <div class="botones">
+            <a target="_blank" href="https://www.fabtextil.com/" class="boton"><p>Ver sitio</p><div id="iconoLink" class="iconosportfolio"></div></a>
+    </div>
         </div>
         </article>
     </section>
@@ -79,15 +80,20 @@
         <div class="titular"><div class="cuadro"></div><h2>Sobre mi</h2><div class="cuadro"></div></div>
         <div class="filete aparicionfilete"></div>
         <div class="doscolumnas">
-            <div class="flexcentrado">
+        <div class="flexcentrado">
                 <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" alt="Alberto Basanta">
         </div>
-        <div class="textoPortfolio">
-        <h4>Alberto Basanta Debasa</h4>
-        <p class="destacado">Desarrollo web | CSS | HTML | JavaScript | Wordpress | UI/UX | Diseño gráfico</p>
-        <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
-        <p>Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en CSS, UI/UX, JavaScript y PHP.</p>
-    </div>
+        <div>
+            <div>
+                <h4>Alberto Basanta Debasa</h4>
+                <p class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</p>
+                <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
+                <p>Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en CSS, UI/UX, JavaScript y PHP.</p>
+                <div class="botones">
+                    <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton"><p>Ver mi CV</p><div id="iconoPdf" class="iconosportfolio"></div></a>
+            </div>
+            </div>
+  </div>
     </div>
     </section>
     <section id="contacto">
