--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
         <h2>Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h2>
     </section>
     <section id="portfolio">
-        <div class="titular"><div class="cuadro"></div><h2>Portfolio</h2><div class="cuadro"></div></div>
+        <div class="titular animacionFade"><h2>Portfolio</h2></div>
         <div class="filete aparicionfilete"></div>
-        <h3 class="animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h3>
         <article>
             <div class="carrusel">
         <div class="interiorCarrusel">
@@ -52,8 +51,8 @@
     </div>
         <div class="textoPortfolio">
         <h4>Mini juego Pokémon</h4>
-        <p class="destacado"> Desarrollo web | JavaScript | CSS | HTML | Diseño gráfico</p>
-        <p>Este proyecto presenta un juego interactivo desarrollado en JavaScript vanilla, inspirado en el universo Pokémon. Eleva el clásico juego de “Piedra, papel o tijera” a una experiencia más compleja incorporando cinco elementos distintos en lugar de tres.</p>
+        <h5 class="destacado"> Desarrollo web | JavaScript | CSS | HTML | Diseño gráfico</h5>
+        <p>Este proyecto presenta un juego interactivo desarrollado en HTML, CSS y JavaScript vanilla, inspirado en el universo Pokémon. Eleva el clásico juego de “Piedra, papel o tijera” a una experiencia más compleja incorporando cinco elementos distintos en lugar de tres.</p>
         <div class="botones">
             <a target="_blank" href="https://minijuego-poke.netlify.app/" class="boton"><p>Ver sitio</p><div id="iconoLink" class="iconosportfolio"></div></a>
             <a target="_blank" href="https://github.com/basantades/mini-juego-pokemon" class="boton"><p>Ver repositorio GitHub</p><div id="iconoGithub" class="iconosportfolio"></div></a>
@@ -68,36 +67,41 @@
     </div>
         <div class="textoPortfolio">
         <h4>Web FAB TEXTIL</h4>
-        <p class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </p>
+        <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
         <p>Realización de la pagina web corporativa para la empresa textil FAB TEXTIL. El diseño se ha enfocado en crear una estética moderna que combine con la identidad familiar y cercana de la marca. Desarrollada utilizando WordPress y optimizando su SEO.</p>
         <div class="botones">
             <a target="_blank" href="https://www.fabtextil.com/" class="boton"><p>Ver sitio</p><div id="iconoLink" class="iconosportfolio"></div></a>
     </div>
         </div>
         </article>
+        <h3 class="animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h3>
     </section>
     <section id="sobremi">
-        <div class="titular"><div class="cuadro"></div><h2>Sobre mi</h2><div class="cuadro"></div></div>
+        <div class="titular animacionFade"><h2>Sobre mi</h2></div>
         <div class="filete aparicionfilete"></div>
         <div class="doscolumnas">
-        <div class="flexcentrado">
-                <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" alt="Alberto Basanta">
-        </div>
-        <div>
+            <div class="flexcentrado cuadrado">
+                <div class="foto1plano flexcentrado">
+                    <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" alt="Alberto Basanta Debasa">
+                </div>
+                <div class="enmarcarFoto animacion-marcos cuadrado">
+                    <div class="marcoFoto"></div>
+                    <div class="marcoFoto"></div>
+                </div>
+            </div>
             <div>
-                <h4>Alberto Basanta Debasa</h4>
-                <p class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</p>
+                <h3 class="textoDegradado">Alberto Basanta Debasa</h3>
+                <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
                 <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
                 <p>Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en CSS, UI/UX, JavaScript y PHP.</p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton"><p>Ver mi CV</p><div id="iconoPdf" class="iconosportfolio"></div></a>
+                </div>
             </div>
-            </div>
-  </div>
-    </div>
+        </div>
     </section>
     <section id="contacto">
-        <div class="titular"><div class="cuadro"></div><h2>Contacto</h2><div class="cuadro"></div></div>
+        <div class="titular animacionFade"><h2>Contacto</h2></div>
         <div class="filete aparicionfilete"></div>
         <div class="doscolumnas contacto">
             <div class="lista">
